reduce size of navbar and fix spacing issues

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,12 +3,11 @@
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: #FFE270;
   transition: all 0.3s ease;
-  height: 70px;
-  padding: 0px 30px;
+  height: 44px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0;
+  padding: 0 13px;
 }
 
 /* Logo */
@@ -21,6 +20,7 @@
   }
   img {
   height: 22px;
+  margin-bottom: 5px;
   }
 }
 
@@ -41,18 +41,26 @@
 /* Basic navbar item */
 .navbar-meteor-item {
   cursor: pointer;
-  padding: 0 20px;
 }
 
 /* Navbar link */
 .navbar-meteor-link {
   color: #2F4550;
-  font-size: 14px;
-  font-size: 1em;
 }
 .navbar-meteor-link:hover {
   color: #D65768;
   text-decoration: none;
+}
+
+i.fa {
+  font-size: 1.4em;
+}
+
+#edit-text-nav {
+  color: #2F4550;
+  p {
+    margin: 0;
+  }
 }
 
 /* Dropdown menu */
@@ -90,8 +98,3 @@
   border-top: 1px solid #E6E6E6;
 }
 
-#edit-text-nav {
-  color: #2F4550;
-  opacity: 0.9;
-  margin-top: 18px;
-}
